# mygame

./: #Character.cpp#  #Level.cpp#  #LevelParser.cpp#  #test.cpp#  *Messages*  *Messages*~  .#Character.cpp  .#Level.cpp  .#test.cpp  30_scrolling.cpp  Android.mk  BLayer.cpp  BLayer.cpp~  BLayer.d  BLayer.h  BLayer.h~  CMakeLists.txt  CMakeLists.txt~  CON  CharManager.cpp  CharManager.cpp~  CharManager.d  CharManager.h  CharManager.h~  Character.cpp  Character.d  Character.h  Collision.cpp  Collision.h  Collision.h~  CollisionManager.h  CollisionTests.h  CollisionTests.h~  DM1.map  Door.cpp  Door.d  Door.h  Factory.h~  Game.cpp  Game.d  (+154 more)
2D/: C2DMatrix.h  Geometry.h  InvertedAABBox2D.h  Makefile  Point.h  Transformations.h  Vector2D.cpp  Vector2D.d  Vector2D.h  Wall2D.h  Wall2D.h~  WallIntersectionTests.h
Armory/: Makefile  Melee.cpp  Melee.cpp~  Melee.d  Melee.h  Projectile.cpp  Projectile.d  Projectile.h  Projectile.h~  Projectile_Shot.cpp  Projectile_Shot.d  Projectile_Shot.h  Shooter.cpp  Shooter.d  Shooter.h  Weapon.cpp  Weapon.d  Weapon.h
Controls/: Touch.cpp  Touch.h
Fuzzy/: FuzzyHedges.h  FuzzyModule.cpp  FuzzyModule.d  FuzzyModule.h  FuzzyOperators.d  FuzzyOperators.h  FuzzyRule.h  FuzzySet.h  FuzzySet_LeftShoulder.d  FuzzySet_LeftShoulder.h  FuzzySet_RightShoulder.d  FuzzySet_RightShoulder.h  FuzzySet_Shoulder.h  FuzzySet_Singleton.d  FuzzySet_Singleton.h  FuzzySet_Triangle.d  FuzzySet_Triangle.h  FuzzyTerm.h  FuzzyVariable.cpp  FuzzyVariable.d  FuzzyVariable.h  FzSet.h
Game/: Entity.cpp  Entity.d  Entity.h  Entity.h~  EntityFunctionTemplates.h  EntityManager.cpp  EntityManager.d  EntityManager.h  MovingEntity.h  Region.h  debug.cpp
Goals/: AttackTargetGoal_Evaluator.cpp  AttackTargetGoal_Evaluator.d  AttackTargetGoal_Evaluator.h  ExploreGoal_Evaluator.cpp  ExploreGoal_Evaluator.d  ExploreGoal_Evaluator.h  Feature.cpp  Feature.d  Feature.h  Generic_Think.cpp  Generic_Think.cpp~  Generic_Think.h  Generic_Think.h~  Goal.h  Goal_2DMove.cpp  Goal_2DMove.cpp~  Goal_2DMove.h  Goal_2DMove.h~  Goal_AttackTarget.cpp  Goal_AttackTarget.d  Goal_AttackTarget.h  Goal_Composite.h  Goal_DodgeSideToSide.cpp  Goal_DodgeSideToSide.d  Goal_DodgeSideToSide.h  Goal_Evaluator.h  Goal_Explore.cpp  Goal_Explore.d  Goal_Explore.h  Goal_Fly.cpp  Goal_Fly.d  Goal_Fly.h  Goal_FlyExplore.cpp  Goal_FlyExplore.d  Goal_FlyExplore.h  Goal_FlyWander.cpp  Goal_FlyWander.d  Goal_FlyWander.h  Goal_FollowPath.cpp  Goal_FollowPath.d  (+42 more)
Graph/: #GraphEdgeTypes.h#  #SparseGraph.h#  #TileGraphHelper.h#  AStarHeuristicPolicies.h  GraphAlgorithms.h  GraphEdgeTypes.h  GraphEdgeTypes.h~  GraphNodeTypes.h  HandyGraphFunctions.h  NodeTypeEnumerations.h  SparseGraph.h  SparseGraph.h~  debug.cpp
Messaging/: MessageDispatcher.cpp  MessageDispatcher.d  MessageDispatcher.h  Telegram.h
Navigation/: PathEdge.h  PathManager.h  PathPlanner.cpp  PathPlanner.d  PathPlanner.h  PathTarget.h  SearchTerminationPolicies.h  TimeSlicedGraphAlgorithms.h
Time/: CrudeTimer.d  CrudeTimer.h  PrecisionTimer.h  Regulator.h  advanced_timers.cpp~  advanced_timers.h  advanced_timers.h~
Triggers/: Trigger.h  TriggerRegion.h  TriggerSystem.h  Trigger_HealthGiver.cpp  Trigger_HealthGiver.d  Trigger_HealthGiver.h  Trigger_LimitedLifeTime.h  Trigger_OnButtonSendMsg.h  Trigger_OnButtonSendMsg.h~  Trigger_Respawning.h  Trigger_SoundNotify.cpp  Trigger_SoundNotify.d  Trigger_SoundNotify.h  Trigger_WeaponGiver.cpp  Trigger_WeaponGiver.d  Trigger_WeaponGiver.h
assets/: 1280x960.tmx  640x480.tmx  DM1.map  DM1.tmx  a.out  dot.png~  params.xml  pause.png~  test.map  test.xml  tiletest.tmx
misc/: CellSpacePartition.h  FrameCounter.d  Stream_Utility_Functions.h  Stream_Utility_Functions.h~  TypeToString.h  utils.h
